--- a/package.json
+++ b/package.json
@@ -132,6 +132,8 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2",
     "yargs": "^4.0.0"
   },
   "devDependencies": {
@@ -165,5 +167,15 @@
     "sinon-chai": "^2.8.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.6.0"
+  },
+  "bugs": {
+    "url": "https://github.com/davezuko/react-redux-starter-kit/issues"
+  },
+  "homepage": "https://github.com/davezuko/react-redux-starter-kit#readme",
+  "bin": {
+    "react-redux-starter-kit": "compile.js"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
